Bug 104382 - Menus should be disabled when they have no enabled submenus
Summary: Menus should be disabled when they have no enabled submenus
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: low trivial
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0
Keywords: accessibility
: 124674 144127 (view as bug list)
Depends on:
Blocks: Main-Menu a11y, Accessibility
  Show dependency treegraph
 
Reported: 2016-12-03 18:37 UTC by Tamás Zolnai
Modified: 2023-07-29 10:41 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2016-12-03 18:37:22 UTC
Description:
Menus with submenus are always enabled, but when they have all submenus disabled the menu also should be disabled.
I think this is true for all kind of this menus. An example is the Table menus in Writer (Table -> Insert, Table -> Delete).
It a UI problem: user can think table insertion or deletion is available, but it's not.
Also an accessibility problem. An accessibility tool should skip (not read) those menus which are not available in the current context.

Steps to Reproduce:
1.Open an empty document in Writer
2.Select Table menu
3.You can see Table -> Insert, Table -> Delete menus are enabled, but they have no availabla submenus, so no reason to be enabled.

Actual Results:  
Menus are enabled when actually their submenus are disabled all.

Expected Results:
These menus should be disabled, when their functionality is not available.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.100 Safari/537.36
Comment 1 Buovjaga 2016-12-09 15:23:24 UTC
Sounds logical -> NEW
Comment 2 QA Administrators 2017-12-10 16:43:18 UTC Comment hidden (obsolete)
Comment 3 Roman Kuznetsov 2018-12-14 20:29:18 UTC
still repro in

Version: 6.3.0.0.alpha0+
Build ID: 3c964980da07892a02d5ac721d80558c459532d0
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-12-12_02:07:45
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

but we should have full list of that menu items
Comment 4 Roman Kuznetsov 2019-04-11 09:16:24 UTC
*** Bug 124674 has been marked as a duplicate of this bug. ***
Comment 5 Buovjaga 2022-05-20 13:07:44 UTC
*** Bug 144127 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2023-07-28 07:23:52 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/630303ad8e94bd634b98e691935a1f4c19582a3a

tdf#104382 - Menus should be disabled when they have no enabled submenus

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Roman Kuznetsov 2023-07-29 10:41:13 UTC
Verified in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e26aeb882dd236adf19679d5df9b7ba5da1ed226
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL threaded

Balazs, thank you for the patch!