tdf#104382 - Menus should be disabled when they have no enabled submenus

Disable menu elements if they only have disabled submenu elemets.
TODO: GTK3

Change-Id: I83cdc58846afd61719ceeba9f993df894ce6fd01
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154938
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>